--- a/my_library/views/library_book.xml
+++ b/my_library/views/library_book.xml
@@ -23,6 +23,8 @@
                             <field name="name"/>
                             <field name="author_ids" widget="many2many_tags"/>
                             <field name="state"/>
+                            <field name="publisher_id"/>
+                            <field name="publisher_city"/>
                             <field name="pages"/>
                             <field name="notes"/>
                             <field name="currency_id"/>
@@ -32,11 +34,18 @@
                         <group>
                             <field name="short_name"/>
                             <field name="date_release"/>
+                            <field name="age_days"/>
                             <field name="date_updated"/>
                             <field name="cover" widget="image" class="oe_avatar"/>
                             <field name="reader_rating"/>
                             <field name="category_id"/>
                         </group>
+                    </group>
+                    <group>
+                        <group>
+                            <field name="ref_doc_id"/>
+                        </group>
+                        <group></group>
                     </group>
                     <group>
                         <field name="description"/>
