--- a/my_library/views/library_book_categ.xml
+++ b/my_library/views/library_book_categ.xml
@@ -11,4 +11,35 @@
     <menuitem name="Book Category" id="library_book_categ_menu" parent="library_base_menu" action="library_book_categ_action"/>
 
 
+    <record id="library_book_category_view_form" model="ir.ui.view">
+        <field name="name">library.book.category.view.form</field>
+        <field name="model">library.book.category</field>
+        <field name="arch" type="xml">
+            <form>
+                <header>
+                    <button name="create_categories" string="Create Categories" type="object"/>
+                </header>
+                <sheet>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="description"/>
+                            <field name="parent_id"/>
+                        </group>
+                        <group></group> 
+                    </group>
+                    <group>
+                        <group>
+                            <field name="child_ids" widget="many2many_tags"/>
+                        </group>
+                        <group>
+                            <field name="parent_path" />
+                        </group>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+
 </odoo>
