--- a/my_library/views/library_book.xml
+++ b/my_library/views/library_book.xml
@@ -52,6 +52,7 @@
                             <field name="cover" widget="image" class="oe_avatar"/>
                             <field name="reader_rating"/>
                             <field name="category_id"/>
+                            <field name="manager_remarks"/>
                         </group>
                     </group>
                     <group>
