--- a/my_library/views/library_book.xml
+++ b/my_library/views/library_book.xml
@@ -28,6 +28,7 @@
                     <button name="filter_books" string="Log books with 2 authors" type="object"/>
                     <button name="list_author_names" string="Author Names" type="object"/>
                     <button name="sort_books" string="Log Sorted Books" type="object"/>
+                    <button name="get_xml" string="Get XML" type="object"/>
                     <field name="state" widget="statusbar"/>
                 </header>
                 <sheet>
