--- a/my_library/views/library_book_revised.xml
+++ b/my_library/views/library_book_revised.xml
@@ -1,16 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <odoo>
-    
-    <!-- <function model="library.book" name="_update_book_price"/> -->
 
     <record id='library_book_action' model='ir.actions.act_window'>
         <field name="name">Library Books</field>
         <field name="res_model">library.book</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree,form,kanban</field>
     </record>
 
-    <menuitem name="My Library" id="library_base_menu" />
-    <menuitem name="Books" id="library_book_menu" parent="library_base_menu" action="library_book_action"/>
+   
 
     <record id="library_book_view_form" model="ir.ui.view">
         <field name="name">Library Book Form</field>
@@ -65,7 +62,6 @@
                         <group>
                             <field name="ref_doc_id"/>
                         </group>
-                        <group></group>
                     </group>
                     <group>
                         <field name="description"/>
@@ -100,5 +96,7 @@
             </search>
         </field>
     </record>
+
+    <menuitem sequence="1" name="Libary Books" id="library_book_menu_item" parent="library_base_menu" action="library_book_action"/>
 
 </odoo>
